WebCore/html/HTMLInputElement.cpp
@@ -2062,10 +2062,10 @@ void HTMLInputElement::defaultEventHandler(Event* evt)
     // FIXME: It would be better to refactor this for the different types of input element.
     // Having them all in one giant function makes this hard to read, and almost all the handling is type-specific.
 
-    bool clickDefaultFormButton = false;
+    bool implicitSubmission = false;
 
     if (isTextField() && evt->type() == eventNames().textInputEvent && evt->isTextEvent() && static_cast<TextEvent*>(evt)->data() == "\n")
-        clickDefaultFormButton = true;
+        implicitSubmission = true;
 
     if (inputType() == IMAGE && evt->isMouseEvent() && evt->type() == eventNames().clickEvent) {
         // record the mouse position for when we get the DOMActivate event
@@ -2104,7 +2104,7 @@ void HTMLInputElement::defaultEventHandler(Event* evt)
     
     // Call the base event handler before any of our own event handling for almost all events in text fields.
     // Makes editing keyboard handling take precedence over the keydown and keypress handling in this function.
-    bool callBaseClassEarly = isTextField() && !clickDefaultFormButton
+    bool callBaseClassEarly = isTextField() && !implicitSubmission
         && (evt->type() == eventNames().keydownEvent || evt->type() == eventNames().keypressEvent);
     if (callBaseClassEarly) {
         HTMLFormControlElementWithState::defaultEventHandler(evt);
@@ -2158,6 +2158,7 @@ void HTMLInputElement::defaultEventHandler(Event* evt)
             case MONTH:
             case NUMBER:
             case PASSWORD:
+            case RADIO:
             case RANGE:
             case SEARCH:
             case TELEPHONE:
@@ -2166,7 +2167,7 @@ void HTMLInputElement::defaultEventHandler(Event* evt)
             case URL:
             case WEEK:
                 // Simulate mouse click on the default form button for enter for these types of elements.
-                clickDefaultFormButton = true;
+                implicitSubmission = true;
                 break;
             case BUTTON:
             case FILE:
@@ -2176,8 +2177,6 @@ void HTMLInputElement::defaultEventHandler(Event* evt)
                 // Simulate mouse click for enter for these types of elements.
                 clickElement = true;
                 break;
-            case RADIO:
-                break; // Don't do anything for enter on a radio button.
             }
         } else if (charCode == ' ') {
             switch (inputType()) {
@@ -2311,7 +2310,7 @@ void HTMLInputElement::defaultEventHandler(Event* evt)
         }        
     }
 
-    if (clickDefaultFormButton) {
+    if (implicitSubmission) {
         if (isSearchField()) {
             addSearchResult();
             onSearch();
@@ -2333,7 +2332,7 @@ void HTMLInputElement::defaultEventHandler(Event* evt)
 
         // Form may never have been present, or may have been destroyed by code responding to the change event.
         if (formForSubmission)
-            formForSubmission->submitClick(evt);
+            formForSubmission->submitImplicitly(evt, isTextField());
 
         evt->setDefaultHandled();
         return;
